[package]
name = "simple_web_server"
version = "0.1.0"
edition = "2021"

[dependencies]
http-body-util = "0.1.0"
hyper = { version = "1.1.0", features = ["full"] }
hyper-util = { version = "0.1.3", features = ["full"] }
json5 = "0.4.1"
rlua = "0.19.8"
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"
tokio = { version = "1.36.0", features = ["full"] }
